--- a/.github/workflows/build_docker_images-healthcheck.yaml
+++ b/.github/workflows/build_docker_images-healthcheck.yaml
@@ -96,7 +96,7 @@ jobs:
             docker.io/${{steps.script.outputs.docker_repo}}:healthcheck
             docker.io/${{steps.script.outputs.docker_repo}}:healthcheck-${{steps.script.outputs.commit_hash}}
             quay.io/${{steps.script.outputs.redhat_quay_repo}}:healthcheck
-            ghcr.io/${{steps.script.outputs.github_repo}}:healthcheck
+            ghcr.io/${{steps.script.outputs.github_repo}}:latest
 
       #- name: Docker Hub Description
       #  uses: peter-evans/dockerhub-description@v4
